--- a/scss/main.scss
+++ b/scss/main.scss
@@ -27,7 +27,7 @@ h3 {
   }
 
   &.sm-heading {
-    margin-bottom: 2rem;
+    margin-bottom: 1.3rem;
     padding: 0.2rem 1rem;
     background: rgba(lighten($primary-color, 2), 0.5);
   }
@@ -93,6 +93,7 @@ main {
   .bio {
     grid-area: bio;
     font-size: 1.5rem;
+    text-align: left;
   }
 
   .job-1 {
@@ -111,6 +112,10 @@ main {
     background: lighten($primary-color, 5);
     padding: 0.5rem;
     border-bottom: $secondary-color 5px solid;
+
+    h3 {
+      color: $secondary-color;
+    }
   }
 }
 
